--- a/a.css
+++ b/a.css
@@ -34,18 +34,18 @@ img {
   width: 320px;
   /* height: 240px; */
   transform: translateZ(.25px) scale(.75) translateX(-94%) translateY(-120%) rotate(-10deg);
-  padding: 10px;
+  padding: 8px;
   border-radius: 5px;
-  background: rgba(240,230,220, .7);
-  box-shadow: 0 0 1px rgb(1, 1, 1);
+  background: rgb(87, 143, 159);
+  box-shadow: 0 0 10px rgb(1, 1, 1);
 }
 
 img:nth-of-type(2) {
-  transform: translateZ(.35px) scale(.6) translateX(-70%) translateY(-40%) rotate(-5deg);
+  transform: translateZ(.35px) scale(.6) translateX(-70%) translateY(-30%) rotate(-5deg);
 }
 
 img:nth-of-type(3) {
-  transform: translateZ(.4px) scale(.5) translateX(-55%) translateY(50%) rotate(10deg);
+  transform: translateZ(.4px) scale(.5) translateX(-55%) translateY(50%) rotate(1deg);
 }
 
 .fas.fa-brain {
@@ -148,7 +148,7 @@ img:nth-of-type(3) {
 }
 
 #title {
-  background-image: url('bg.jpg');
+  background-image: url(cool-background1.png);
   width: 100%;
   height: 100%;
   z-index:2;
@@ -170,22 +170,22 @@ img:nth-of-type(3) {
 
 #slide1 {
   /* position: fixed; */
-  background-image: url(bg.jpg);
+  background-image: url(cool-background6.png);
   /* z-index:2; */
 }
 
 #slide2 {
-  background-image: url(bg.jpg);
+  background-image: url(cool-background4.png);
   z-index:2;
 }
 
-/* #slide3:before {
-  /* background-image: url(bg.jpg); */
+#slide3 {
+  background-image: url(cool-background3.png);
   /* transform: translateZ(-1px) scale(2); */
-/* } */
+}
 
 #slide4 {
-  background: #222;
+  background-image: url(cool-background2.png);
 }
 
 #slide4 h1 {
